# refactor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  Я соберу проект под Windows.cmd
Geometry/: Point.cpp  Point.h  shape.cpp  shape.h  transform.cpp  transform.h
SecondFunk/: SecondaryFunction.h
SecondFunk/Win/Release/: SecFun_lib.lib
